src/snapshots/tidy_json__sort__tests__should_apply_uniform_indent.snap
---
source: src/sort.rs
expression: sorted_json
---
Object {
    "a": Number(1),
    "b": Number(2),
    "c": Number(3),
}
