src/snapshots/tidy_json__sort__tests__sort_json_array_of_objects.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "a": Number(1),
    "b": Number(2),
    "c": Array [
        Object {
            "d": Number(4),
            "e": Number(5),
        },
        Object {
            "f": Number(6),
            "g": Number(7),
        },
    ],
}
