src/snapshots/tidy_json__sort__tests__sort_json_key_length_asc.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "a": Number(1),
    "cc": Number(2),
    "bbb": Number(3),
}
