src/snapshots/tidy_json__sort__tests__sort_json_key_length_desc.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "bbb": Number(3),
    "cc": Number(2),
    "a": Number(1),
}
