src/snapshots/tidy_json__sort__tests__sort_json_line_length.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "a": Number(1),
    "bb": Number(2),
    "cat": Number(4),
    "zebra": Number(3),
}
