src/snapshots/tidy_json__sort__tests__sort_json_nested_depth_1.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "a": Number(1),
    "b": Number(2),
    "c": Object {
        "b": Number(4),
        "a": Number(3),
    },
}
