src/snapshots/tidy_json__sort__tests__sort_json_preserve_array.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "a": Number(1),
    "b": Number(2),
    "c": Array [
        Number(4),
        Number(3),
    ],
}
