src/snapshots/tidy_json__sort__tests__sort_json_reverse_simple.snap
---
source: src/sort.rs
expression: sorted_obj
---
Object {
    "c": Number(1),
    "b": Number(2),
    "a": Number(3),
}
